--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ form {
   
   /* Links inside the navbar */
   .navbar a {
-    float: left;
+    float: center;
     font-size: 16px;
     color: grey;
     text-align: center;
@@ -106,7 +106,7 @@ form {
   
   /* The dropdown container */
   .dropdown {
-    float: left;
+    float: center;
     overflow: hidden;
   }
   
@@ -131,10 +131,13 @@ form {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #adf5e3;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    float: center;
+    background-color: rgba(137, 175, 177, 0.842);
+
+    left: 46.5% !important;
+  right: auto !important;
+  text-align: center !important;
+  transform: translate(0%, 0) !important;
   }
   
   /* Links inside the dropdown */
@@ -144,15 +147,19 @@ form {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
+    text-align: center;
+    float: center;
   }
   
   /* Add a grey background color to dropdown links on hover */
   .dropdown-content a:hover {
-    background-color: rgb(231, 162, 162);
+    background-color: rgba(243, 228, 204, 0.842);
+    border-radius: 16px;
+    float: center;
   }
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
+    float: center;
   }
